improve config for jwt token
