# gateway/internal/dto/register_account.go
@@ -7,7 +7,6 @@ type RegisterAccount struct {
 }
 
 type RegisterAccountResponse struct {
-	AccountID uint64 `json:"account_id" validate:"required"`
-	PlayerID  string `json:"player_id" validate:"required"`
-	Token     string `json:"token" validate:"required"`
+	Account Account `json:"account"`
+	Token   string  `json:"token" validate:"required"`
 }
